// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`tool parameters JSON Schema (wire shape) apply_patch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "patchText": {
      "description": "The full patch text that describes all changes to be made",
      "type": "string",
    },
  },
  "required": [
    "patchText",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) bash 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "command": {
      "description": "The command to execute",
      "type": "string",
    },
    "description": {
      "description": 
"Clear, concise description of what this command does in 5-10 words. Examples:
Input: ls
Output: Lists files in current directory

Input: git status
Output: Shows working tree status

Input: npm install
Output: Installs package dependencies

Input: mkdir foo
Output: Creates directory 'foo'"
,
      "type": "string",
    },
    "timeout": {
      "description": "Optional timeout in milliseconds",
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
    "workdir": {
      "description": "The working directory to run the command in. Defaults to the current directory. Use this instead of 'cd' commands.",
      "type": "string",
    },
  },
  "required": [
    "command",
    "description",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) edit 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "The absolute path to the file to modify",
      "type": "string",
    },
    "newString": {
      "description": "The text to replace it with (must be different from oldString)",
      "type": "string",
    },
    "oldString": {
      "description": "The text to replace",
      "type": "string",
    },
    "replaceAll": {
      "description": "Replace all occurrences of oldString (default false)",
      "type": "boolean",
    },
  },
  "required": [
    "filePath",
    "oldString",
    "newString",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) glob 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "path": {
      "description": "The directory to search in. If not specified, the current working directory will be used. IMPORTANT: Omit this field to use the default directory. DO NOT enter "undefined" or "null" - simply omit it for the default behavior. Must be a valid directory path if provided.",
      "type": "string",
    },
    "pattern": {
      "description": "The glob pattern to match files against",
      "type": "string",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) grep 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "include": {
      "description": "File pattern to include in the search (e.g. "*.js", "*.{ts,tsx}")",
      "type": "string",
    },
    "path": {
      "description": "The directory to search in. Defaults to the current working directory.",
      "type": "string",
    },
    "pattern": {
      "description": "The regex pattern to search for in file contents",
      "type": "string",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) invalid 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "error": {
      "type": "string",
    },
    "tool": {
      "type": "string",
    },
  },
  "required": [
    "tool",
    "error",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) lens_mark 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "about": {
      "description": "One line describing the Lens. Used only when this call creates it.",
      "type": "string",
    },
    "activate": {
      "description": "Switch the user's view to this Lens. You may do this freely when the active Lens is one you curate (or there is none); switching away from a user's Lens asks them first.",
      "type": "boolean",
    },
    "author": {
      "description": "Keep only hits on lines last changed by this author (case-insensitive substring of git blame's name or email).",
      "type": "string",
    },
    "caseSensitive": {
      "description": "kind 'pattern' only. Matching is case-sensitive unless you pass false.",
      "type": "boolean",
    },
    "changed": {
      "description": "Keep only hits on lines git reports as changed against this ref or range — e.g. 'HEAD' (uncommitted), 'main', or 'HEAD~1..HEAD' (the last commit). Combine with a pattern to mark 'every call to x() that this change touched'.",
      "type": "string",
    },
    "facet": {
      "description": "The concern these lines belong to, kebab-case: 'retry-path', 'any-casts', 'feature-flag-reads'. An existing facet id or label adds another rule to that concern; a new name mints one (up to 6 per Lens). NEVER a generic name like 'hit', 'match' or 'result' — this is what the user reads in the legend, so it has to say what the lines have in common.",
      "type": "string",
    },
    "glob": {
      "description": "Repo-relative globs restricting the search, e.g. ['packages/*/src/**/*.ts']. The cheapest way to narrow a rule that matched too much.",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "kind": {
      "description": "How to find the lines. 'pattern' is a ripgrep regex, painting each matched LINE: language-agnostic but it also matches comments and strings. 'symbol' names a top-level declaration and paints its whole extent: coarser, but idiom-blind — it finds a const-arrow, a generator and a function declaration alike. 'diff' marks the lines git reports as changed against \`ref\` (default HEAD = uncommitted changes; 'main' = changed since main; 'HEAD~1..HEAD' = the last commit). 'structural' is an ast-grep pattern but its backend is not installed yet, so it is refused.",
      "enum": [
        "pattern",
        "symbol",
        "diff",
        "structural",
      ],
      "type": "string",
    },
    "language": {
      "description": "Required for kind 'structural', e.g. 'ts', 'tsx', 'js', 'py'.",
      "type": "string",
    },
    "lens": {
      "description": "Id or name of the Lens to mark on (see lens_list). A name that doesn't exist creates a Lens with that name — give it a descriptive one ('Retry Handling', not 'search'), and check lens_list first so you add to an existing Lens instead of making a near-duplicate.",
      "type": "string",
    },
    "name": {
      "description": "Required for kind 'symbol': the exact top-level declaration name, e.g. 'retryWithBackoff'.",
      "type": "string",
    },
    "note": {
      "description": "Which part of the concern THIS rule marks, shown on the hover of every line it marks: 'the definition', 'callers outside src/net', 'the test that pins the old behaviour'. REQUIRED when the concern already has a rule — it is the only thing that tells two lines of one concern apart. Optional on a concern's first rule, if the query doesn't explain itself.",
      "type": "string",
    },
    "path": {
      "description": "kind 'symbol' only: restrict to this repo-relative file or directory prefix.",
      "type": "string",
    },
    "pattern": {
      "description": "Required for kind 'pattern' (a rust-regex, as ripgrep takes it) and kind 'structural'.",
      "type": "string",
    },
    "reason": {
      "description": "Why you are making this change now (this call, not the concern — see \`why\`), recorded in the Lens history the user can review. Always give one when curating on your own initiative.",
      "type": "string",
    },
    "ref": {
      "description": "kind 'diff' only: the git ref or 'A..B' range to compare against. Defaults to HEAD.",
      "type": "string",
    },
    "requestedByUser": {
      "description": "True ONLY when the user explicitly asked for this mark in this conversation. The concern is then theirs, and you must not later change or remove it without asking. Leave it unset when you are curating the view on your own initiative.",
      "type": "boolean",
    },
    "since": {
      "description": "Keep only hits on lines last changed after this date ('2 weeks ago', '2026-09-01'), per git blame.",
      "type": "string",
    },
    "what": {
      "description": "WHAT the marked lines are, as a phrase a newcomer can picture: 'every place a failed request is re-queued'. Don't repeat the label. This is the concern's identity: it should never need to change. REQUIRED when minting a concern. Given for an existing concern, it CORRECTS a what that misdescribes the lines (pass \`reason\`); if the concern's intent has changed, mint a new concern and lens_unmark this one instead.",
      "type": "string",
    },
    "why": {
      "description": "WHY to look at these lines for the task right now. In an overview, how it fits: 'every other concern builds on these types, so read them first'. During a change, what to do or check: 'each must handle the new TimeoutError'. REQUIRED when minting a concern; given for an existing one, it replaces the why (lens_edit also does this). Keep what + why under ~120 characters.",
      "type": "string",
    },
  },
  "required": [
    "lens",
    "facet",
    "kind",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) lens_unmark 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "facet": {
      "description": "Concern to remove ENTIRELY, with every rule pointing at it (id or label). Use this to free a slot when the Lens is at the 6-concern cap.",
      "type": "string",
    },
    "lens": {
      "description": "Id or name of the Lens to remove from (see lens_list).",
      "type": "string",
    },
    "reason": {
      "description": "Why you are removing it, recorded in the Lens history the user can review.",
      "type": "string",
    },
    "requestedByUser": {
      "description": "True ONLY when the user explicitly asked for this removal in this conversation.",
      "type": "boolean",
    },
    "rule": {
      "description": "Rule id to remove — lens_mark returns it, and lens_list shows a Lens's rules.",
      "type": "string",
    },
  },
  "required": [
    "lens",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) lsp 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "character": {
      "description": "The character offset (1-based, as shown in editors)",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "filePath": {
      "description": "The absolute or relative path to the file",
      "type": "string",
    },
    "line": {
      "description": "The line number (1-based, as shown in editors)",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "operation": {
      "description": "The LSP operation to perform",
      "enum": [
        "goToDefinition",
        "findReferences",
        "hover",
        "documentSymbol",
        "workspaceSymbol",
        "goToImplementation",
        "prepareCallHierarchy",
        "incomingCalls",
        "outgoingCalls",
      ],
      "type": "string",
    },
    "query": {
      "description": "Search query for workspaceSymbol. Empty string requests all symbols.",
      "type": "string",
    },
  },
  "required": [
    "operation",
    "filePath",
    "line",
    "character",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) plan 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {},
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) question 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "questions": {
      "description": "Questions to ask",
      "items": {
        "properties": {
          "header": {
            "description": "Very short label (max 30 chars)",
            "type": "string",
          },
          "multiple": {
            "description": "Allow selecting multiple choices",
            "type": "boolean",
          },
          "options": {
            "description": "Available choices",
            "items": {
              "properties": {
                "description": {
                  "description": "Explanation of choice",
                  "type": "string",
                },
                "label": {
                  "description": "Display text (1-5 words, concise)",
                  "type": "string",
                },
              },
              "required": [
                "label",
                "description",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "question": {
            "description": "Complete question",
            "type": "string",
          },
        },
        "required": [
          "question",
          "header",
          "options",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "questions",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) read 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "The absolute path to the file or directory to read",
      "type": "string",
    },
    "limit": {
      "description": "The maximum number of lines to read (defaults to 2000)",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "offset": {
      "description": "The line number to start reading from (1-indexed)",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
  },
  "required": [
    "filePath",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) skill 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "name": {
      "description": "The name of the skill from available_skills",
      "type": "string",
    },
  },
  "required": [
    "name",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) task 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "background": {
      "description": "Run the agent in the background. You will be notified when it completes.",
      "type": "boolean",
    },
    "command": {
      "description": "The command that triggered this task",
      "type": "string",
    },
    "description": {
      "description": "A short (3-5 words) description of the task",
      "type": "string",
    },
    "prompt": {
      "description": "The task for the agent to perform",
      "type": "string",
    },
    "subagent_type": {
      "description": "The type of specialized agent to use for this task",
      "type": "string",
    },
    "task_id": {
      "description": "This should only be set if you mean to resume a previous task (you can pass a prior task_id and the task will continue the same subagent session as before instead of creating a fresh one)",
      "type": "string",
    },
  },
  "required": [
    "description",
    "prompt",
    "subagent_type",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) todo 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "todos": {
      "description": "The updated todo list",
      "items": {
        "properties": {
          "content": {
            "description": "Brief description of the task",
            "type": "string",
          },
          "priority": {
            "description": "Priority level of the task: high, medium, low",
            "type": "string",
          },
          "status": {
            "description": "Current status of the task: pending, in_progress, completed, cancelled",
            "type": "string",
          },
        },
        "required": [
          "content",
          "status",
          "priority",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "todos",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) webfetch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "format": {
      "default": "markdown",
      "description": "The format to return the content in (text, markdown, or html). Defaults to markdown.",
      "enum": [
        "text",
        "markdown",
        "html",
      ],
      "type": "string",
    },
    "timeout": {
      "description": "Optional timeout in seconds (max 120)",
      "type": "number",
    },
    "url": {
      "description": "The URL to fetch content from",
      "type": "string",
    },
  },
  "required": [
    "url",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) websearch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "contextMaxCharacters": {
      "description": "Maximum characters for context string optimized for LLMs (default: 10000)",
      "type": "number",
    },
    "livecrawl": {
      "description": "Live crawl mode - 'fallback': use live crawling as backup if cached content unavailable, 'preferred': prioritize live crawling (default: 'fallback')",
      "enum": [
        "fallback",
        "preferred",
      ],
      "type": "string",
    },
    "numResults": {
      "description": "Number of search results to return (default: 8)",
      "type": "number",
    },
    "query": {
      "description": "Websearch query",
      "type": "string",
    },
    "type": {
      "description": "Search type - 'auto': balanced search (default), 'fast': quick results, 'deep': comprehensive search",
      "enum": [
        "auto",
        "fast",
        "deep",
      ],
      "type": "string",
    },
  },
  "required": [
    "query",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) write 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "content": {
      "description": "The content to write to the file",
      "type": "string",
    },
    "filePath": {
      "description": "The absolute path to the file to write (must be absolute, not relative)",
      "type": "string",
    },
  },
  "required": [
    "content",
    "filePath",
  ],
  "type": "object",
}
`;
